src/tests/cases/snapshots/diskonaut__tests__cases__ui__small_width_long_folder_name.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 20.0K | /tmp/diskonaut_tes[...]h_long_folder_name
┌────────────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                     file2                      │
│                                                │
│                   8.0K (40%)                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                     file3                      │
│                                                │
│                                                │
│                   8.0K (40%)                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                     file1                      │
│                                                │
│                                                │
│                   4.0K (20%)                   │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
                                                  
 ←↓↑→/<ENTER>/<ESC>: navigate, <BACKSPACE>: del   

